tests/ui/const-generics/gca/generic-param-rhs.stderr
error: generic parameters in const blocks are not allowed; use a named `const` item instead
  --> $DIR/generic-param-rhs.rs:7:19
   |
LL |     foo::<const { N + 1 }>();
   |                   ^
   |
   = help: consider factoring the expression into a `type const` item and use it as the const argument instead

error: aborting due to 1 previous error

